# course_2025_slam_pkgs

./: .gitmodules  README.md  yolo.py  yolo_test.py
RacelineOptim/: README.md  main_gen_frictionmap.py  main_globaltraj.py  main_globaltraj_tt02.py  map_converter.ipynb  sanity_check.ipynb  spline.py  su_bigmap.pgm  su_bigmap.txt  su_bigmap.yaml  visualize_raceline.ipynb
RacelineOptim/helper_funcs_glob/src/: export_traj_race.py
RacelineOptim/inputs/tracks/: ens444.csv  ens55.csv  ens7.csv  ens88.csv  ens9.csv  ens_1.csv  ens_2.csv  ens_quali.csv  ens_race.csv  ens_race2.csv  ens_race3.csv  esclangon_loop_2.csv  saintcyr.csv  saintcyr5.csv  saintcyr7.csv
RacelineOptim/maps/: ens55.yaml  ens_1.pgm  ens_1.yaml  ens_2.pgm  saintcyr7.yaml  saintcyr_1.yaml  ssh-remote+bolide1.local: 2.inetloc
RacelineOptim/opt_mintime_traj/src/: opt_mintime.py
RacelineOptim/params/: tt02.ini
params/: f110.ini
tests/: calibration.py  main.ipynb  processing.py  yolo.py
workspace/course_2024_pkgs/control_bolide/: CMakeLists.txt  calibration_direction copy.py  calibration_direction.py  test.ipynb  test.py
workspace/course_2024_pkgs/perception_bolide/: CMakeLists.txt
workspace/install/: local_setup.sh  setup.sh
workspace/log/: latest_build
workspace/slam_karto_g2o-master/: CMakeLists.txt
workspace/slam_karto_g2o-master/config/: mapping_karto_g2o.yaml
workspace/slam_karto_g2o-master/launch/: amcl.launch  build_map_w_params.launch  karto_slam.launch  posegraph_w_params.launch
workspace/slam_karto_g2o-master/src/: G2OSolver.cpp  slam_karto_g2o.cpp
(+184 files in other folders)
